<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/runner"
    tools:context="com.example.root.aplicacionbasedatos.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:drawableLeft="@drawable/shoe"
        android:text="Step Counter PRO"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginLeft="72dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="103dp"
        android:text="@string/loginUsuario"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="57dp"
        android:layout_toLeftOf="@+id/editText_Username"
        android:layout_toStartOf="@+id/editText_Username"
        android:text="@string/loginContrasena"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText_Username"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:backgroundTint="@android:color/background_light"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/editText_Password"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/editText_Username"
        android:layout_alignStart="@+id/editText_Username"
        android:backgroundTint="@android:color/background_light"
        android:ems="10"
        android:inputType="textPersonName"
        android:password="true"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/editText_Password"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="37dp"
        android:background="#FF1376D2"
        android:text="@string/loginEntrar"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button_Register"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_Login"
        android:layout_alignEnd="@+id/editText_Password"
        android:layout_alignRight="@+id/editText_Password"
        android:background="#FF1376D2"
        android:text="@string/loginRegistrarse"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button_Invitado"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"
        android:background="#FF1376D2"
        android:text="Entrar sin registrarse"
        android:textColor="@android:color/white" />
</RelativeLayout>
